rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__text__tests__text_mark_char_classes_lang_en.snap
---
source: src/tokenization/text.rs
expression: text.classes
---
[
    Consonant,
    Consonant,
    Vowel,
    Any,
    Vowel,
    Consonant,
    Vowel,
    Consonant,
    Vowel,
    Consonant,
    Consonant,
    Vowel,
    Any,
    Any,
    Any,
    Any,
    Any,
]
