rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__text__tests__text_mark_char_classes_no_lang.snap
---
source: src/tokenization/text.rs
expression: text.classes
---
[
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
    Any,
]
