rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__text__tests__text_normalize_nfd.snap
---
source: src/tokenization/text.rs
expression: "(&text.source, &text.chars, &text.words[0])"
---
(
    [
        'C',
        'o',
        'n',
        'c',
        'e',
        'i',
        'ç',
        'ã',
        'o',
    ],
    [
        'C',
        'o',
        'n',
        'c',
        'e',
        'i',
        'c',
        'a',
        'o',
    ],
    WordShape {
        ix: 0,
        place: (
            0,
            9,
        ),
        stem: 11,
        pos: None,
        fin: true,
    },
)
