rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__text__tests__text_strip-2.snap
---
source: src/tokenization/text.rs
expression: text.words
---
[
    WordShape {
        offset: 0,
        slice: (
            1,
            4,
        ),
        stem: 5,
        pos: None,
        fin: true,
    },
    WordShape {
        offset: 1,
        slice: (
            8,
            11,
        ),
        stem: 5,
        pos: None,
        fin: true,
    },
]
